--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,9 @@
+:root {
+  --primary: #1b7691;
+  --secondary: #fb991a;
+  --light: #fcf1ef;
+  --dark: #022539;
+}
 * {
   padding: 0;
   margin: 0;
@@ -12,4 +18,40 @@ body {
 canvas {
   max-width: 100%;
   max-height: 100vh;
+}
+
+button.cat {
+  all: unset;
+  background: var(--primary);
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: lighter;
+  padding: 1em 2em;
+  border-radius: 25px;
+  bottom: 0;
+  right: 0;
+  margin: 1em;
+  cursor: pointer;
+  border: none;
+  transition: all 0.2s ease-in-out;
+  filter: drop-shadow(0px 0px 10px #00000078);
+}
+
+.colors-container {
+  z-index: 3;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  margin: 1em;
+  button {
+    width: 2em;
+    height: 2em;
+    border: 3px solid white;
+    filter: drop-shadow(0px 0px 4px #0000008d);
+    cursor: pointer;
+    border-radius: 50%;
+  }
 }
