--- a/src/style.scss
+++ b/src/style.scss
@@ -53,5 +53,9 @@ button.cat {
     filter: drop-shadow(0px 0px 4px #0000008d);
     cursor: pointer;
     border-radius: 50%;
+    transition: transform 0.09s ease-in-out;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
