--- a/src/style.scss
+++ b/src/style.scss
@@ -37,6 +37,9 @@ button.cat {
   border: none;
   transition: all 0.2s ease-in-out;
   filter: drop-shadow(0px 0px 10px #00000078);
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 .colors-container {
