--- a/src/style.scss
+++ b/src/style.scss
@@ -15,12 +15,24 @@ html {
 body {
   overflow: auto;
 }
+nav {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  img {
+    height: 100%;
+    width: auto;
+    opacity: 0.75;
+  }
+}
 canvas {
   max-width: 100%;
   max-height: 100vh;
 }
 
-button.cat {
+button#cat {
   all: unset;
   background: var(--primary);
   position: absolute;
@@ -62,3 +74,4 @@ button.cat {
     }
   }
 }
+
