--- a/src/style.scss
+++ b/src/style.scss
@@ -30,13 +30,15 @@ nav {
 canvas {
   max-width: 100%;
   max-height: 100vh;
+  position: relative;
+  z-index: 2;
 }
 
 button#cat {
   all: unset;
   background: var(--primary);
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: lighter;
