--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@ html {
 }
 body {
   overflow: auto;
+  background-color: black;
 }
 nav {
   z-index: 3;
@@ -85,4 +86,5 @@ video {
   left: 10px;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
